--- a/source/_posts/算法可视化学习网站.md
+++ b/source/_posts/算法可视化学习网站.md
@@ -5,7 +5,7 @@ toc: true
 date: 2019-05-26 11:56:28
 tags:
  - arithmetic
-`description: 日常总结`
+description: 日常总结
 ---
 > 说实话，算法这一块对于我们深入理解一门技术的原理还是非常重要的，后续要加强这块内容的学习。今天从网上找了一些可视化算法学习网站，便于后续的理解。
 
